plugins {
    id 'java'
}

allprojects {
    group = 'com.gme.pay'
    version = '0.1.0'
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.10.3')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    // Unit/slice tests: run everywhere (no Docker). Docker-backed Testcontainers ITs
    // must be annotated @Tag("docker") — they are excluded here and run only via the
    // `integrationTest` task (CI ubuntu runners have Docker; the local Windows box does not).
    test {
        useJUnitPlatform {
            excludeTags 'docker'
        }
    }

    tasks.register('integrationTest', Test) {
        description = 'Docker-backed integration tests (JUnit @Tag("docker")) — needs a Docker engine.'
        group = 'verification'
        testClassesDirs = sourceSets.test.output.classesDirs
        classpath = sourceSets.test.runtimeClasspath
        useJUnitPlatform {
            includeTags 'docker'
        }
        shouldRunAfter tasks.named('test')
    }
}
